# autogdb-agent

./: .gitignore  LICENSE  PROJECT_STRUCTURE.md  README.md  USAGE_GUIDE.md  development.yaml  pyproject.toml
config/: default.yaml  general_config.yaml
examples/: basic_debug.py  crash_analysis.py
plugins/debuggers/: README.md
plugins/protocols/: __init__.py  base.py  http_protocol.py  tcp_protocol.py  udp_protocol.py
src/autogdb_agent/: __init__.py  cli.py
src/autogdb_agent/core/: __init__.py  agent.py  config.py  exceptions.py  message.py  plugin.py  plugin_manager.py  session.py  tool_registry.py  tool_runner.py
src/autogdb_agent/plugins/: __init__.py
src/autogdb_agent/plugins/analyzers/: crash_analyzer_plugin.py
src/autogdb_agent/plugins/debuggers/: gdb_plugin.py
src/autogdb_agent/tools/: __init__.py  analyzer.py  base.py  debugger.py  disassembler.py  memory_inspector.py  poc_sender.py  protocol_sender.py  stack_trace.py
src/autogdb_agent/utils/: __init__.py  helpers.py  logger.py
